# valet

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  autob.toml  valet.toml
.github/workflows/: build.yml
src/: build.cxx  build.hxx  graph.hxx  main.cxx  package.cxx  package.hxx
src/core/: autob_core.toml  valet.toml
src/core/include/autob/: build.hxx  graph.hxx  package.hxx  platform.hxx  string_utils.hxx
src/core/include/valet/: build.hxx  command.hxx  graph.hxx  install.hxx  package.hxx  platform.hxx  stopwatch.hxx  string_utils.hxx  term.hxx  thread_utils.hxx
src/core/src/: build.cxx  command.cxx  git.cxx  git.hxx  install.cxx  package.cxx  platform.cxx  platform.hxx  sha1.cxx  sha1.hxx  stopwatch.cxx  string_utils.cxx  string_utils.hxx  term.cxx  thread_utils.cxx
test/sample_cxx/: sample.toml
test/sample_cxx/src/: fizzbuzz.cxx  fizzbuzz.h  main.cxx
test/sample_exec/: sample.toml
test/test_projects/deep_deps/: deep_deps.toml  valet.toml
test/test_projects/deep_deps/src/: main.cxx
test/test_projects/eratosthenes_dylib/: valet.toml
test/test_projects/header_only_deps/check_even/: valet.toml
test/test_projects/primes/: primes.toml  valet.toml
test/test_projects/primes/src/: main.cxx  primes.h
test/test_projects/primes_dylib/: valet.toml
test/test_projects/primes_remote_dep/: valet.toml
test/test_projects/primes_remote_dep/src/: primes.cxx
test/unit/: autob_tests.toml  valet_tests.toml
test/unit/src/: main.cxx
test/valet_tests/: valet.toml
tests/test_projects/lib_with_tests/: valet.toml
(+10 files in other folders)
